@@ -1,0 +1,35 @@
+<!doctype html><html lang=en><link href='data:image/gif;base64,R0lGODlhEAAQAPH/AAAAAP8AAP8AN////yH5BAUAAAQALAAAAAAQABAAAAM2SLrc/jA+QBUFM2iqA2bAMHSktwCCWJIYEIyvKLOuJt+wV69ry5cfwu7WCVp2RSPoUpE4n4sEADs=' rel=icon><title>KISS</title><meta charset=utf-8><meta name=Description content="An independent Linux® distribution with a focus on simplicity and the concept of less is more."><style>body{text-align:center;overflow-y:scroll;font:calc(0.75em + 1vmin) monospace}pre pre{text-align:left;display:inline-block}img{max-width:57ch;display:block;height:auto;width:100%}@media(prefers-color-scheme:dark){body{background:#000;color:#fff}a{color:#6CF}}</style><pre>
+
+<a href=/><b>KISS</b></a><span style='color:#e60000'> 💋</span>  <a href=/news>News</a>  <a href=/blog>Blog</a>  <a href=/install>Install KISS</a>  <a href=/team>Team</a>  <a href=/guidestones>Guidestones</a>  <a href=/faq>FAQ</a>
+
+<a href=/community>Community (<b>NEW</b>)</a>  <a href=/scrots>Scrots</a>  <a href=/package-system>Package System</a>  <a href=/testimonials>Testimonials</a>  <a href=/style>Style</a>
+
+<a href=/ports>Ports (non-x86-64)</a>  <a href=/projects>Software</a>  <a href=/contact>Contact</a>  <a href=/donate>Donate</a>  <a href=https://github.com/kisslinux/>GitHub -&gt;</a>
+
+<pre>
+Subject	Firefox package changes
+From	Dylan Araps &lt;dylan@k1ss.org&gt;
+Date	Wed, 6 May 2020 01:05:09 +0100
+
+The 'firefox' package will now follow the latest release instead of
+the ESR. The ESR version of Firefox is additionally available via 
+the 'firefox-esr' package for those wanting a browser with less
+surprises..
+
+To complement the changes, 'firefox-bin' now provides the latest
+release and 'firefox-bin-esr', the ESR release. The '-bin' packages 
+are in the process of being built and will be released shortly.
+
+<div style='height:200px'>
+The registered trademark Linux(R) is used pursuant to a
+sublicense from the Linux Foundation, the exclusive
+licensee of Linus Torvalds, owner of the mark on a
+world­wide basis.
+
+(C) Dylan Araps 2019-2020
+
+
+<a href="/news/20200506a.txt">View page source</a>
+
+
+</pre></pre>
