@@ -9,8 +9,9 @@
 |                                                       |
 +-------------------------------------------------------+
 
-- <a href=/news/20200114a>14/01/2020: Firefox binaries now available</a>
-- <a href=/news/20200101a>01/01/2020: Firefox privacy changes moved</a>
+- <a href='/news/20200506a'>05/06/2020: Firefox package changes</a>
+- <a href='/news/20200114a'>14/01/2020: Firefox binaries now available</a>
+- <a href='/news/20200101a'>01/01/2020: Firefox privacy changes moved</a>
 - <a href='/news/20191105a'>05/11/2019: The Wiki is live</a>
 - <a href='/news/20191031a'>31/10/2019: ninja replaced by samurai</a>
 - <a href='/news/20191015b'>15/10/2019: New python release (3.8.0)</a>
